<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Field Officer</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rs">₹</string>
    <string name="per">per</string>
    <string name="title_activity_dashboard">DashboardActivity</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_itinerary">Itinerary</string>
    <string name="title_cart">Cart</string>
    <string name="title_account">Account</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="united_states">United States</string>
    <string name="united_states_alpha_2_code">US</string>
    <string name="singapore">Singapore</string>
    <string name="singapore_alpha_2_code">SG</string>
    <string name="canada">Canada</string>
    <string name="canada_alpha_2_code">CA</string>
    <string name="united_arab_emirates">United Arab Emirates</string>
    <string name="united_arab_emirates_alpha_2_code">AE</string>
    <string name="united_kingdom">United Kingdom</string>
    <string name="united_kingdom_emirates_alpha_2_code">GB</string>
    <string name="italy">Italy</string>
    <string name="italy_alpha_2_code">IT</string>
    <string name="germany">Germany</string>
    <string name="germany_alpha_2_code">DE</string>
    <string name="e_sim">eSIM</string>
    <string name="dollar">$ </string>
    <string name="Rs">\u20B9</string>
    <string name="buy_now">Buy Now</string>
    <string name="add_to_cart">Add to Cart</string>
    <string name="e_sim_data">ESimData</string>
    <string name="popular_countries">Popular countries</string>
    <string name="my_orders">My Orders</string>
    <string name="order_items">Order Items</string>
    <string name="installation_instructions_for_esim">Installation instructions for eSIM</string>
    <string name="share_your_order">share your order !</string>
    <string name="iphone">iPhone</string>
    <string name="android">Android</string>
    <string name="esim_countryTitle">ESimCountryTitle</string>
    <string name="pdf_show_local_progress_title">hiiii</string>
    <string name="pdf_show_local_progress_content">Hiii</string>
    <string name="DeskPortal.Dashboard.title">My Support</string>
    <string name="DeskPortal.Dashboard.header.description"></string>
    <string name="facebook_app_id">802609781780786</string>
    <string name="fb_login_protocol_scheme">fb802609781780786</string>
    <string name="facebook_client_token">56789</string>
    <string name="individual">Individual</string>
    <string name="builder">Builder</string>
    <string name="agent">Agent</string>
    <string name="dealer">Dealer</string>
    <string name="are_you">Are You</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile number</string>
    <string name="create_account">Create Account</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="logout">Logout</string>
    <string name="resend_in_3_30">Resend in 3:30</string>
    <string name="property_details">Property Details</string>
    <string name="send_otp">Send OTP</string>
    <string name="email">Email</string>
    <string name="update_your_profile">Update Your Profile</string>
    <string name="your_contact_details">Your Contact Details</string>
    <string name="apply_filters">Apply Filters</string>
    <string name="clear_all">Clear All</string>
    <string name="add_property">Add Property</string>
    <string name="log_in">Log in </string>
    <string name="sign_up">Sign up</string>
    <string name="pin_code">Pin Code *</string>
    <string name="address">Address *</string>
    <string name="basic_details">Basic Details</string>
    <string name="upload">Upload</string>
    <string name="select_images">Select Image</string>
    <string name="add_project">Add Project</string>
    <string name="my_property">My Property</string>
    <string name="city">City *</string>
    <string name="description">Description *</string>
    <string name="title">Title *</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="images">Images</string>
    <string name="next_amp_save"><![CDATA[Next & Save]]></string>
    <string name="my_project">My Projects</string>
    <string name="data_not_found">Data Not Found\nSorry, the data you are looking for does not exist.</string>
    <string name="project_details">Project Details</string>
    <string name="project_amenities">Project Amenities</string>
    <string name="to_price">To Price *</string>
    <string name="select_image">Upload Image</string>
    <string name="select_banner">Upload Banner image</string>
    <string name="search_project">Search Project</string>
    <string name="search_property">Search Property</string>
    <string name="add_inventory">Add Inventory</string>
    <string name="cancel">Cancel</string>
    <string name="highendkitchens">HighEndKitchens</string>
    <string name="floor_plan">Floor Plan</string>
    <string name="property_location">Property Location</string>
    <string name="ask_for_details">Ask For Details</string>
    <string name="floor_amp_counter"><![CDATA[Floor & Counter:]]></string>
    <string name="project_specifications">Project Specifications</string>
    <string name="edit_inventory">Edit Inventory</string>
    <string name="no_data_available">No data available.</string>
    <string name="no_property_available">No Property available.</string>
    <string name="no_project_available">No Projects available.</string>
    <string name="no_inventory_available">No Inventory available.</string>
    <string name="submit">Submit</string>
    <string name="edit_property">Edit Property</string>
    <string name="edit_project">Edit Project</string>
    <string name="contact_deatails">Contact Details</string>
    <string name="verify">verify</string>
    <string name="my_inventory">My Inventory</string>
    <string name="enter_your_otp">Enter Your OTP</string>
    <string name="this_is_not_a_valid_email_address">This Is Not a Valid Email Address</string>
    <string name="check_your_email_for_otp">Check Your email for OTP.</string>
    <string name="menu_home">Home</string>
    <string name="menu_privacy">Privacy Policy</string>
    <string name="menu_term">Term And Condition</string>
    <string name="menu_about">About us</string>
    <string name="contact_seller">Contact Seller</string>
    <string name="view_inventory">View Inventory</string>
    <string name="invent_details">Inventory Details</string>
    <string name="posted_on_owner">Posted On Owner:</string>
    <string name="builder_reputation">Builder Reputation:</string>
    <string name="legal_compliance">Legal Compliance:</string>
    <string name="avoid_verbal_agreement">Avoid Verbal Agreement:</string>
    <string name="Complete_Now"><u>Complete Now</u></string>
    <string name="body_type">Body Type *</string>
    <string name="Close"><u>Close</u></string>
    <string name="password">Password</string>
    <string name="get_started_with_sign">Get started with sign up or log in.</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="recover_your_password">Recover Your Password</string>
    <string name="reset_tag">Enter your mobile number to recover your password.</string>
    <string name="otp_tag">Generate Verification Code</string>
    <string name="update">Update</string>
    <string name="sign_up_here">Sign up Here.</string>
    <string name="don_t_have_an_account">Don’t have an account?</string>
    <string name="lets_get_started">Lets get started</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="remember_me">Remember Me</string>
    <string name="name_star">Profile Name <font color='#FF0000'>*</font></string>
    <string name="type">Type here..</string>
    <string name="profilePhoto_star">Profile Photo <font color='#FF0000'>*</font></string>
    <string name="takeSelfiText">Please take selfie for your profile</string>
    <string name="roalSlectText">Please select your profile type to enjoy the benefits.</string>
    <string name="enterProfilePhoto">Please add the profile photo</string>
    <string name="ok">Ok</string>
    <string name="log_in_here">Log In Here</string>
    <string name="you_already_have_an_account">You already have an account?</string>
    <string name="process_adhar">Proceed for Aadhaar Verification</string>
    <string name="process_adhar_verify">Thank you for trusting TrucksUp.</string>
    <string name="process_adhar_verify_desc"> Let’s start the journey to make your business successful.</string>
    <string name="generate_OTP">Generate Verification Code</string>
    <string name="verify_pan">Verify Your PAN</string>
    <string name="verify_OTP">Verify Verification Code</string>
    <string name="verify_kyc_hint">Verification Code has been sent on your registration no.</string>
    <string name="verification_code_enter">Enter verification code</string>
    <string name="remainingTime">Remaining time</string>
    <string name="cancle">Cancel</string>
    <string name="time_remaning">Time Remaining</string>
    <string name="auto_manual">Enter Code manually</string>
    <string name="insu_Detail_msg">We have fetched your vehicle details, please provide other details, if required. </string>
    <string name="insu_has_policy_exp">Has the previous policy expired?</string>
    <string name="insu_Not_Expired">Not Expired</string>
    <string name="insu_Expired">Expired</string>
    <string name="insu_Policy_Expiry_Date">Policy Expiry Date?</string>
    <string name="insu_Before">Before</string>
    <string name="insu_Between">Between</string>
    <string name="insu_After">After</string>
    <string name="continu_main">Continue</string>
    <string name="trying_to_customize_best_deals_for_you">Trying to customize best deals for you</string>
    <string name="estimated_wait_time">Estimated wait time</string>
    <string name="please_wait_while_we_are_analysing_your_truck_details_to_offer_you_the_bestprices">Please wait while we are analysing your Truck details to offer you the best prices</string>
    <string name="verifying_registration_number">Verifying registration number....</string>
    <string name="verifying_engine_number">Verifying engine number....</string>
    <string name="verifying_chassis_number">Verifying chassis number....</string>
    <string name="calculating_truck_s_age_and_weight">Calculating truck’s age and weight....</string>
    <string name="thankyou_for_your_interest_we_ll_get_back_to_you_shortly">Thank you for your interest. We’ll get back to you shortly.</string>
    <string name="vehicleDetails">Vehicle Details Confirmation</string>
    <string name="notification">Notification</string>
    <string name="device_permissions">Device Permissions</string>
    <string name="camara">Camara</string>
    <string name="camara_hint">TrucksUp uses this information to help you do things such as Upload Photos</string>
    <string name="location">Location</string>
    <string name="location_hint">TrucksUp uses this information to help you do things such as Use GPS , and update vehical Location</string>
    <string name="microphone">Microphone</string>
    <string name="microphone_hint">TrucksUp uses this information to help you do things such as Search City by Voice</string>
    <string name="phone">Phone</string>
    <string name="phone_hint">TrucksUp uses this information to help you do things such as App access device modle no for fixed app bugs</string>
    <string name="notification_hint">TrucksUp uses this information to help you do things such as Receveing Push Notification of new load available</string>
    <string name="update_device_settings">Update device settings</string>
</resources>