<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".insurance.InsuranceLoadingFragment">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:background="@color/appbg"
            android:paddingBottom="@dimen/_12sdp"
            android:visibility="visible"
            tools:viewBindingIgnore="true"
            android:layout_margin="@dimen/_16sdp"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/primery_text"
                android:fontFamily="@font/bai_jamjuree_bold"
                android:textSize="@dimen/_18ssp"
                android:gravity="center_vertical"
                android:text="@string/trying_to_customize_best_deals_for_you"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primery_text"
                        android:fontFamily="@font/bai_jamjuree_medium"
                        android:textSize="@dimen/_11ssp"
                        android:gravity="center_vertical"
                        android:text="@string/estimated_wait_time"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/primery_text"
                        android:fontFamily="@font/bai_jamjuree_medium"
                        android:textSize="@dimen/_11ssp"
                        android:gravity="center_vertical"
                        android:text="00:00"/>

                </LinearLayout>
            </RelativeLayout>
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:src="@mipmap/truck_insurance_image_verify"
                android:scaleType="fitXY"/>
            <TextView
                android:id="@+id/text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_16sdp"
                android:textColor="@color/primery_text"
                android:fontFamily="@font/bai_jamjuree_semi_bold"
                android:textSize="@dimen/_14ssp"
                android:gravity="center"
                android:text="@string/please_wait_while_we_are_analysing_your_truck_details_to_offer_you_the_bestprices"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:textColor="@color/primery_text"
                android:fontFamily="@font/bai_jamjuree_medium"
                android:textSize="@dimen/_14ssp"
                android:gravity="center_vertical"
                android:drawableStart="@drawable/verified_icon_16"
                android:drawablePadding="@dimen/_16sdp"
                android:text="@string/verifying_registration_number"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/secondry_text"
                android:fontFamily="@font/bai_jamjuree_medium"
                android:textSize="@dimen/_14ssp"
                android:gravity="center_vertical"
                android:drawableStart="@drawable/verified_gray_16"
                android:drawablePadding="@dimen/_16sdp"
                android:text="@string/verifying_engine_number"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/secondry_text"
                android:fontFamily="@font/bai_jamjuree_medium"
                android:textSize="@dimen/_14ssp"
                android:gravity="center_vertical"
                android:drawableStart="@drawable/verified_gray_16"
                android:drawablePadding="@dimen/_16sdp"
                android:text="@string/verifying_chassis_number"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/secondry_text"
                android:fontFamily="@font/bai_jamjuree_medium"
                android:textSize="@dimen/_14ssp"
                android:gravity="center_vertical"
                android:drawableStart="@drawable/verified_gray_16"
                android:drawablePadding="@dimen/_16sdp"
                android:text="@string/calculating_truck_s_age_and_weight"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_20sdp"
                android:textColor="@color/blue"
                android:fontFamily="@font/bai_jamjuree_bold"
                android:textSize="@dimen/_14ssp"
                android:gravity="center"
                android:text="@string/thankyou_for_your_interest_we_ll_get_back_to_you_shortly"/>

        </LinearLayout>

    </FrameLayout>
</layout>
