<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appbg"
    tools:context=".activities.DevicePermitioins">
<RelativeLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:id="@+id/tt"
        android:layout_height="@dimen/_40sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_40sdp"
            android:layout_centerInParent="true"
            android:fontFamily="@font/bai_jamjuree_medium"
            android:gravity="center"
            android:text="@string/device_permissions"
            android:textColor="@color/blue"
            android:textSize="@dimen/_14ssp" />
        <ImageButton
            android:layout_width="@dimen/_40sdp"
            android:layout_height="match_parent"
            android:src="@drawable/back_icon"
            android:tint="@color/blue"
            android:onClick="backScreen"
            android:background="@color/transparent"
            tools:ignore="UseAppTint" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_below="@id/tt"
        android:layout_marginBottom="@dimen/_40sdp"
        android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_16sdp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/camara"
                android:textColor="@color/primery_text"
                android:fontFamily="@font/bai_jamjuree_semi_bold"
                android:textSize="@dimen/_13ssp"
                android:layout_weight="1"
                android:gravity="center_vertical"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Device Permitions"
                android:textColor="@color/text_grey"
                android:fontFamily="@font/bai_jamjuree_medium"
                android:textSize="@dimen/_13ssp"
                android:id="@+id/cam"
                android:layout_weight="1"
                android:gravity="end|center_vertical"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/camara_hint"
            android:textColor="@color/text_grey"
            android:fontFamily="@font/bai_jamjuree_medium"
            android:textSize="@dimen/_10ssp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/border_color"
            android:layout_marginTop="@dimen/_12sdp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/location"
                android:textColor="@color/primery_text"
                android:fontFamily="@font/bai_jamjuree_semi_bold"
                android:textSize="@dimen/_13ssp"
                android:layout_weight="1"
                android:gravity="center_vertical"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Device Permitions"
                android:textColor="@color/text_grey"
                android:fontFamily="@font/bai_jamjuree_medium"
                android:textSize="@dimen/_13ssp"
                android:id="@+id/loc"
                android:layout_weight="1"
                android:gravity="end|center_vertical"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/location_hint"
            android:textColor="@color/text_grey"
            android:fontFamily="@font/bai_jamjuree_medium"
            android:textSize="@dimen/_10ssp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/border_color"
            android:layout_marginTop="@dimen/_12sdp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/microphone"
                android:textColor="@color/primery_text"
                android:fontFamily="@font/bai_jamjuree_semi_bold"
                android:textSize="@dimen/_13ssp"
                android:layout_weight="1"
                android:gravity="center_vertical"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Device Permitions"
                android:textColor="@color/text_grey"
                android:fontFamily="@font/bai_jamjuree_medium"
                android:textSize="@dimen/_13ssp"
                android:id="@+id/mic"
                android:layout_weight="1"
                android:gravity="end|center_vertical"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/microphone_hint"
            android:textColor="@color/text_grey"
            android:fontFamily="@font/bai_jamjuree_medium"
            android:textSize="@dimen/_10ssp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/border_color"
            android:layout_marginTop="@dimen/_12sdp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/phone"
                android:textColor="@color/primery_text"
                android:fontFamily="@font/bai_jamjuree_semi_bold"
                android:textSize="@dimen/_13ssp"
                android:layout_weight="1"
                android:gravity="center_vertical"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Device Permitions"
                android:textColor="@color/text_grey"
                android:fontFamily="@font/bai_jamjuree_medium"
                android:textSize="@dimen/_13ssp"
                android:id="@+id/phone"
                android:layout_weight="1"
                android:gravity="end|center_vertical"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone_hint"
            android:textColor="@color/text_grey"
            android:fontFamily="@font/bai_jamjuree_medium"
            android:textSize="@dimen/_10ssp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/border_color"
            android:layout_marginTop="@dimen/_12sdp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/_40sdp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/notification"
                android:textColor="@color/primery_text"
                android:fontFamily="@font/bai_jamjuree_semi_bold"
                android:textSize="@dimen/_13ssp"
                android:layout_weight="1"
                android:gravity="center_vertical"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="Device Permitions"
                android:textColor="@color/text_grey"
                android:fontFamily="@font/bai_jamjuree_medium"
                android:textSize="@dimen/_13ssp"
                android:id="@+id/notification"
                android:layout_weight="1"
                android:gravity="end|center_vertical"/>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notification_hint"
            android:textColor="@color/text_grey"
            android:fontFamily="@font/bai_jamjuree_medium"
            android:textSize="@dimen/_10ssp" />

    </LinearLayout>
    </ScrollView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_weight="1"
        android:background="@color/blue"
        android:elevation="@dimen/_4sdp"
        android:fontFamily="@font/roboto_medium"
        android:gravity="center"
        android:id="@+id/next"
        android:onClick="openDeviceSettings"
        android:text="@string/update_device_settings"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp" />
</RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>